--- a/variables_and_string.ipynb
+++ b/variables_and_string.ipynb
@@ -49,13 +49,16 @@
     "\n",
     "#Use the different methods that are given under 'REQUIREMENTS' to complete the code.\n",
     "\n",
+    "famous_for1=famous_for.replace('A','a')\n",
+    "text =f'Hello. My name is '+name.title()+'.\\n'+'I am an English novelist. I was born on '+dob+', in '+birthplace.title()+\\\n",
+    "'.\\nI am most famous as '+famous_for1+'.\\nI married '+ married_to+' in '+ year_of_marriage+'. We have '+number_of_children+' children.\\n' +\\\n",
+    "'Some of my most famous works include ' +famous_works +'.\\nBesides being a writer, my other talent was '+ other_talent.lower()+'.\\nI died on '+\\\n",
+    "death_date+', at my home in '+place_of_death+'.' \n",
+    "length=len(text)\n",
+    "length_str=str(length)\n",
+    "title ='A Brief Profile of C. Dickens in '+length_str+' characters.\\n' # The title of the output text should be stored in this variable\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "title = # The title of the output text should be stored in this variable\n",
-    "\n",
-    "output_text = # Your final output text should be stored in this variable, which will also include the 'title'.\n",
+    "output_text = title+'\\n'+text   # Your final output text should be stored in this variable, which will also include the 'title'.\n",
     "\n",
     "print(output_text)\n",
     "\n",
@@ -68,7 +71,7 @@
     "Some of my most famous works include \"A Christmas Carol\", \"Oliver Twist\", \"David Copperfield\", and \"Great Expectations\".\n",
     "Besides being a writer, my other talent was doing dramatic public readings of my work.\n",
     "I died on June 9, 1870, at my home in Gad's Hill Place, Kent, England.'''\n",
-    "\n",
+    "print\n",
     "if output_text == test_text:\n",
     "    print(\"SUCCESS! Yes, your output text matches the test text.\")\n",
     "else:\n",
