--- a/variables_and_string.ipynb
+++ b/variables_and_string.ipynb
@@ -31,9 +31,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A Brief Profile of C. Dickens in 505 characters.\n",
+      "\n",
+      "Hello. My name is Charles Dickens.\n",
+      "I am an English novelist. I was born on February 7, 1812, in Portsmouth, England.\n",
+      "I am most famous as a writer of the Victorian era.\n",
+      "I married Catherine Hogarth in 1836. We have ten children.\n",
+      "Some of my most famous works include \"A Christmas Carol\", \"Oliver Twist\", \"David Copperfield\", and \"Great Expectations\".\n",
+      "Besides being a writer, my other talent was doing dramatic public readings of my work.\n",
+      "I died on June 9, 1870, at my home in Gad's Hill Place, Kent, England.\n",
+      "SUCCESS! Yes, your output text matches the test text.\n"
+     ]
+    }
+   ],
    "source": [
     "name = \"CHARLES DICKENS\"\n",
     "dob = \"February 7, 1812\"\n",
@@ -71,7 +88,6 @@
     "Some of my most famous works include \"A Christmas Carol\", \"Oliver Twist\", \"David Copperfield\", and \"Great Expectations\".\n",
     "Besides being a writer, my other talent was doing dramatic public readings of my work.\n",
     "I died on June 9, 1870, at my home in Gad's Hill Place, Kent, England.'''\n",
-    "print\n",
     "if output_text == test_text:\n",
     "    print(\"SUCCESS! Yes, your output text matches the test text.\")\n",
     "else:\n",
@@ -95,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
